# Els

./: LICENSE  README(3) (2).md  README.md  download  packs.txt  pyproject.toml  requirements.txt  train_model.py  xai_visualization.py
MedAI_Modular_Research_Suite/MedAI_Modular_Research_Suite/: CITATION.cff  README.md  __init__.py  aasag_models.py  environment.yml  requirements.txt  rulix_model.py  zero_nas_model.py
alzheimer-efficientnet-gradcam/: README.md
alzheimer-efficientnet-gradcam/configs/: config.yaml
alzheimer-efficientnet-gradcam/src/: data.py  (+6 more)
configs/: ablation_study.json  calibration_analysis.json  centralized_synthetic.yaml  classification_performance.json  cross_institution_generalization.json  explainability_analysis.json  extended_metrics_domains.json  extended_sota_metrics.json  federated_performance.json  federated_synthetic.yaml  framework_comparison.json  nas_efficiency.json  nas_synthetic.yaml  sota_comparison.json
data/: README.md
docs/: MANUSCRIPT_MAPPING.md  MIGRATION.md
examples/: run_colorectal_histology.py  run_mnist_resnet.py  run_scheduler_demo.py
notebooks/: README.md
scripts/: evaluate_predictions.py  run_nas.py  train_centralized.py  train_federated.py
src/: ablation_study.py  calibration_analysis.py  classification_performance.py  cross_institution_generalization.py  explainability_analysis.py  extended_metrics_domains.py  extended_sota_metrics.py  federated_performance.py  framework_comparison.py  nas_efficiency.py  run_all.py  runs_s.py  sota_comparison.py
tests/: test_imports.py  test_metrics.py  test_models.py
(+43 files in other folders)
