[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra-aixia"
version = "0.1.0"
description = "Research prototypes for medical AI, multimodal ML/LM fusion, and resource-aware inference scheduling."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Hydra AIXIA Contributors"}]

[tool.setuptools.packages.find]
where = ["src"]
