[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multih-eu"
version = "0.1.0"
description = "Federated multi-disease medical AI framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Diogen Babuc"},
  {name = "Teodor-Florin Fortis"}
]

[tool.setuptools.packages.find]
where = ["src"]
